--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -1,7 +1,9 @@
-<h1 style="text-align: center;">Empleados de la Empresa</h1>
+<div class="contenedor">
+    <h1 style="text-align: center;">Empleados de la Empresa</h1>
+        
+    <div class="row">
+        <app-empleado></app-empleado>
 
-<br/>
-
-<app-empleado></app-empleado>
-<app-empleado></app-empleado>
-<app-empleado></app-empleado>
+        
+    </div>
+</div>
