--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -11,7 +11,9 @@
     <input type="button" value="Aceptar"(click)="llamaEmpresa(empresa.value)">
 
 </div>
+{{textoDeRegistro}}<br/>
 
-Registrado: <input type="checkbox" id="registro" [checked]="usuRegistrado"/>
-
+<!-- Registrado: <input type="checkbox" id="registro" [checked]="usuRegistrado" (click)="setUsuarioRegistrado()"/> -->
+Registrado <input type="radio" value="si" name="nRegistro" id="registro" [checked]="usuRegistrado" (click)="setUsuarioRegistrado($event)"/>
+No registrado <input type="radio" value="no" name="nRegistro" id="registro" (click)="setUsuarioRegistrado($event)"/>
 {{getRegistroUsuario()}}
